--- a/Pipfile
+++ b/Pipfile
@@ -6,9 +6,12 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-flask = "*"
 flask-sqlalchemy = "*"
 flask-migrate = "*"
+flask = "*"
+basilica = "*"
+tweepy = "*"
+os = "*"
 
 [requires]
 python_version = "3.7"
