--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ gunicorn = "*"
 sqlalchemy = "*"
 basilica = "*"
 flask-migrate = "*"
+flask-sqlalchemy = "*"
 
 [requires]
 python_version = "3.7"
